tests/invalid/Continue_Invalid_1.whiley
function f(int x) -> int:
    if x > 0:
        continue
    return 0
